--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 
   <body>
     <div id="app"></div>
-    <script type="module" src="/Passwordo"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
