--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Passwordo - random password generator</title>
-    <base href="/Passwordo/" />
+    <base href="https://jakubkedzierski92.github.io/Passwordo/" />
   </head>
 
   <body>
