--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
   <body>
     <div id="app"></div>
-    <script type="module" src="/Passwordo/"></script>
+    <script type="module" src="/dist/index-2b450e86.js"></script>
   </body>
 </html>
