Fight for deployment

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://jakubkedzierski92.github.io/Passwordo/vite.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Passwordo - random password generator</title>
     <base href="https://jakubkedzierski92.github.io/Passwordo/" />
@@ -10,6 +13,6 @@
 
   <body>
     <div id="app"></div>
-    <script type="module" src="/dist/index-2b450e86.js"></script>
+    <script type="module" src="/Passwordo/dist/index-2b450e86.js"></script>
   </body>
 </html>
