--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 
   <body>
     <div id="app"></div>
-    <script type="module" src="/Passwordo/dist/index-2b450e86.js"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
